# Agent_study

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.en.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENT_PLAN.md  LICENSE  MANIFEST.in  Makefile  Makefile.ps1  README.en.md  README.md  SECURITY.en.md  SECURITY.md  commit_msg3.tmp  mkdocs.yml  pyproject.toml  readme.md  requirements.txt  start.ps1
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  label.yml  mkdocs.yml  release.yml  stale.yml
data/docs/: sample.txt
docs/: 01-models-and-prompts.en.md  01-models-and-prompts.md  02-chains.en.md  02-chains.md  03-memory.en.md  03-memory.md  04-retrieval-and-rag.en.md  04-retrieval-and-rag.md  05-agents.en.md  05-agents.md  06-langserve-and-deployment.en.md  06-langserve-and-deployment.md  ARCHITECTURE.en.md  ARCHITECTURE.md  COST_AND_LIMITS.en.md  COST_AND_LIMITS.md  ENV_SETUP.en.md  ENV_SETUP.md  GLOSSARY.en.md  GLOSSARY.md  LEARNING_GUIDE.en.md  LEARNING_GUIDE.md  OBSERVABILITY.en.md  OBSERVABILITY.md  PROJECT_STRUCTURE.en.md  PROJECT_STRUCTURE.md  REFERENCES.en.md  REFERENCES.md  TROUBLESHOOTING.en.md  TROUBLESHOOTING.md  WEB_FRONTEND.en.md  WEB_FRONTEND.md  index.en.md  index.md
examples/: 00_check.py  01_models_prompts.py  02_chains.py  03_memory.py  03_memory_graph.py  03_memory_runnable.py  04_rag.py  05_agents.py  06_langserve.py  07_ollama_local.py  08_qwen.py  09_caching.py  10_rag_eval.py  11_observability.py  INDEX.en.md  INDEX.md  _common.py
examples/_common/: __init__.py  calc.py  env.py  io.py  llm.py  paths.py  settings.py
notebooks/: 00_getting_started.ipynb  01_models_and_prompts.ipynb  02_chains.ipynb  03_memory.ipynb  04_retrieval_and_rag.ipynb  05_agents.ipynb  06_langserve_and_deployment.ipynb  INDEX.en.md  INDEX.md
tests/: _helpers.py  conftest.py  test_03_memory_logic.py  test_04_rag.py  test_06_langserve.py  test_10_rag_eval.py  test_11_observability.py  test_calculator.py  test_env.py  test_format_docs.py  test_io.py  test_llm.py  test_paths.py  test_prompts.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/data/: categories.ts  courses.ts
web/src/pages/: CourseDetailPage.tsx  CoursesPage.tsx  HomePage.tsx  LearnPage.tsx  LoginPage.tsx  NotFoundPage.tsx  ProfilePage.tsx  ProgressPage.tsx  RegisterPage.tsx
web/src/store/: AuthContext.tsx  ProgressContext.tsx  ThemeContext.tsx  index.tsx
web/src/styles/: account.css  base.css  courses.css  header.css  home.css  learn.css  responsive.css
(+24 files in other folders)
