[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# 注意：本项目目前不作为 Python 包发布（仅供学习）。
# 此 pyproject.toml 主要用于统一 lint / format / type-check 配置。
# 若未来要打包，请补充 [project] 段并把 examples/ 包成 langchain_study。

[project]
name = "agent-study"
version = "0.3.0"
description = "LangChain 学习项目：从 0 到 1 掌握 Model I/O、Chain、Memory、Retrieval、Agent、LangServe"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Dajucoder", url = "https://github.com/Dajucoder" },
]
keywords = ["langchain", "llm", "rag", "agent", "langserve", "learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Dajucoder/Agent_study"
Issues = "https://github.com/Dajucoder/Agent_study/issues"
Changelog = "https://github.com/Dajucoder/Agent_study/blob/main/CHANGELOG.md"
Security = "https://github.com/Dajucoder/Agent_study/security/policy"

# ---- 工具配置 ----

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    ".venv",
    "data",
    "notebooks",
    "build",
    "dist",
]

[tool.ruff.lint]
# 选用的规则集（精简起步）
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # 行长度由 line-length 控制
    "B008",   # 函数调用中带默认值的参数（如 Path 路径）
    "SIM108", # 有时三元比 if/else 更清晰
    "RUF012", # 可变类属性，class 内可变默认
]

[tool.ruff.lint.per-file-ignores]
# 演示脚本中允许 print、未使用变量等
"examples/*.py" = ["T201", "F401"]
"notebooks/*.ipynb" = ["ALL"]
"tests/*.py" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "ignore::DeprecationWarning:langchain_community.*",
    "ignore::DeprecationWarning:langchain_core.*",
]

[tool.coverage.run]
branch = true
source = ["examples"]
omit = [
    "examples/00_check.py",
    "examples/06_langserve.py",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
